# PythonPlaywrightProject

./: .gitignore  README.md  pyproject.toml  pytest.ini  token.json
support/: test_config.py
support/helpers/: gmail_client.py
support/page_objects/: base_page.py  home_page.py  login_page.py
tests/: conftest.py  test_send_email.py
